--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    color: white;
+    color: rgb(20, 19, 19);
     background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
